tests/fail/wrong-item.rs
use enumerate::Enumerate;

fn main() {
    #[derive(Enumerate)]
    struct S {
        a: (),
        b: (),
        c: (),
    }
}
