tests/fail/wrong-item.stderr
error: Expected `enum` found `struct`.
 --> $DIR/wrong-item.rs:5:5
  |
5 |     struct S {
  |     ^^^^^^
